welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: type mismatch;
 found   : Boolean
 required: Int
  setPos(getMondeLargeur()-1,getY==getMondeHauteur()-1)
                                 ^