welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {

  setPos(getMondeLargeur()-1,getY==getMondeHauteur()-1)
}